k8s/create-order-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: create-order
  name: create-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: create-order
  template:
    metadata:
      labels:
        app: create-order
    spec:
      containers:
      - image: weixuantepo/create-order
        imagePullPolicy: Never
        name: create-order

---

apiVersion: v1
kind: Service
metadata:
  name: create-order-service
  labels:
    app: create-order-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: create-order
