k8s/get-orders-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: get-orders
  name: get-orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-orders
  template:
    metadata:
      labels:
        app: get-orders
    spec:
      containers:
      - image: weixuantepo/get-orders
        imagePullPolicy: Never
        name: get-orders

---

apiVersion: v1
kind: Service
metadata:
  name: get-orders-service
  labels:
    app: get-orders-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: get-orders
