k8s/get-restaurants-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: get-restaurants
  name: get-restuarants
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-restaurants
  template:
    metadata:
      labels:
        app: get-restaurants
    spec:
      containers:
      - image: weixuantepo/get-restaurants
        imagePullPolicy: Never
        name: get-restaurants

---

apiVersion: v1
kind: Service
metadata:
  name: get-restaurants-service
  labels:
    app: get-restaurants-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: get-restaurants
