k8s/owner-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: owner
  name: owner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owner
  template:
    metadata:
      labels:
        app: owner
    spec:
      containers:
      - image: gcr.io/restaurantorder-sg/owner
        imagePullPolicy: Always
        name: owner
---

apiVersion: v1
kind: Service
metadata:
  name: owner-service
  labels:
    app: owner-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: owner
