k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-restaurantorder
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: esd.weixuan.dev
    http:
      paths:
      - path: /owner
        backend:
          serviceName: owner-service
          servicePort: 5000
      - path: /restaurant
        backend:
          serviceName: restaurant-service
          servicePort: 5001
      - path: /order
        backend:
          serviceName: order-service
          servicePort: 5002
